# indelible

./: .gitignore  Cargo.toml  README.md  rxconfig.py
indelible/: example_data.py  indelible.py  style.py
indelible/components/: auth.py  habit_bar.py  header.py
indelible/pages/: home.py  login.py  signup.py
indelible/state/: auth.py  base.py
src/: app.rs  handler.rs  lib.rs  main.rs  storage.rs  tui.rs
src/views/: mod.rs  ui.rs
