[package]
name = "indelible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
directories = "5.0.1"
serde = { version = "^1.0", features = ["derive"] }
time = "0.3.26"
tui = { package = "ratatui", version = "0.22.0" }
